<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidService</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_service">start service</string>
    <string name="stop_service">stop service</string>
    <string name="bind_service">bind service</string>
    <string name="unbing_service">unbind service</string>
    <string name="aidl_bing_service">aidl bind service</string>
    <string name="aidl_unbing_service">aidl unbind service</string>

</resources>
